# DistributedTaskScheduler

./: CMakeLists.txt  README.md  projectStructure.txt
inc/: NetworkUtils.h  Task.h  Worker.h
src/: NetworkUtils.cpp  Task.cpp  Worker.cpp  main.cpp  server.cpp
